# last7days-skill

./: .gitignore  CLAUDE.md  PROJECT_OVERVIEW.md  README.md  SKILL.md  app.py  pyproject.toml  requirements.txt
scripts/: last7days.py
scripts/lib/: __init__.py  bluesky.py  github_source.py  hackernews.py  reddit.py  synthesizer.py  web_search.py
tests/: test_hackernews.py  test_reddit.py  test_synthesizer.py
