[project]
name = "last7days-skill"
version = "1.0.0"
description = "Research any topic across 5 platforms — last 7 days only"
authors = [{ name = "Dr. Farooq" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "duckduckgo-search>=6.0.0",
    "streamlit>=1.35.0",
]

[project.scripts]
last7days = "scripts.last7days:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
